# DragonEye-Auditor

./: .gitignore  Dockerfile  LICENSE  README.md  ai_studio_code.txt  audit_gemini_flash_10ep.jsonl  inference.py  openenv.yaml  ping.py  pyproject.toml  requirements.txt  test_agent_loop.py
agent_node/: .env.example  brain.py
deploy/: Dockerfile
env_server/: main.py
env_server/core/: environment.py  evaluator.py  models.py  rewards.py
env_server/data/: reviews_v1.json
server/: app.py
server/data/: reviews_v1.json
src/agent_node/: brain.py
src/env_server/core/: environment.py  evaluator.py  models.py  rewards.py
src/server/: app.py
src/server/data/: reviews_v1.json
